Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -97,9 +97,13 @@
        </section>
        <!-- word Section starts from here -->
         <section id="word-container" class="bg-slate-50 w-11/12 mx-auto grid grid-cols-3 gap-8" >
-       
+       <div class="text-center mx-auto mt-10 p-16 col-span-3 space-y-3">
+        <p class="font-bangla text-sm text[#79716B] ">আপনি এখনো কোন Lesson Select করেননি</p>
+        <h1 class="font-bold text-4xl text-[#292524]">একটি Lesson Select করুন।</h1>
+       </div>
         </section>
         <p class=" bg-[#1A91FF10] hover:bg-[#1A91FF80] p-4 rounded-sm"></p>
        <script src="./script.js"></script>
+       
   </body>
 </html>
