Completed word details with daisiUI Modal

--- a/index.html
+++ b/index.html
@@ -102,7 +102,16 @@
         <h1 class="font-bold text-4xl text-[#292524]">একটি Lesson Select করুন।</h1>
        </div>
         </section>
-        <p class=" bg-[#1A91FF10] hover:bg-[#1A91FF80] p-4 rounded-sm"></p>
+        <!-- DaisiUi Modal Section Starts here -->
+         <!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+ 
+
+
+</dialog>
+
+<!-- Script tag here dont touch it by any chance -->
        <script src="./script.js"></script>
        
   </body>
