Add loding sections

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 
             </div>
        </section>
+       <section id="spining" class=" flex justify-center items-center spin hidden ">
+        <span class="loading loading-dots loading-xl"></span>
+       </section>
        <!-- word Section starts from here -->
         <section id="word-container" class="bg-slate-50 w-11/12 mx-auto grid grid-cols-3 gap-8" >
        <div class="text-center mx-auto mt-10 p-16 col-span-3 space-y-3">
