added margins and paddings

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             </div>
        </section>
-       <section id="spining" class=" flex justify-center items-center spin hidden ">
+       <section id="spining" class=" flex justify-center items-center py-7 spin hidden ">
         <span class="loading loading-dots loading-xl"></span>
        </section>
        <!-- word Section starts from here -->
