adding search bar

--- a/index.html
+++ b/index.html
@@ -95,6 +95,20 @@
 
             </div>
        </section>
+       <!-- Search btn and input here -->
+       <section class="flex justify-center items-center py-6">
+        <div class="join">
+  <div>
+    <label class="input validator join-item">
+    
+      <input id="search-input" type="text" placeholder="Search here" required />
+    </label>
+    <!-- <div class="validator-hint hidden">Enter valid email address</div> -->
+  </div>
+  <button id="search-btn" class="btn btn-primary join-item">search</button>
+</div>
+       </section>
+       <!-- loading section here -->
        <section id="spining" class=" flex justify-center items-center py-7 spin hidden ">
         <span class="loading loading-dots loading-xl"></span>
        </section>
